# void

./: .gitignore  Cargo.toml  README.md  build.md  build.sh  buildenv.sh  setup_and_build.sh  tree.txt
.github/workflows/: build-android.yml  build-plugins.yml  build.yml
cli/: Cargo.toml
cli/plugins/: crypto.toml  dweet.toml  fstransport.toml  ntfy.toml  omnilogger.toml  storage.toml
cli/plugins/crypto/: Cargo.toml
cli/plugins/crypto/src/: lib.rs
cli/plugins/dweet/: Cargo.toml
cli/plugins/dweet/src/: lib.rs
cli/plugins/fstransport/: Cargo.toml
cli/plugins/fstransport/src/: lib.rs
cli/plugins/ntfy/: Cargo.toml
cli/plugins/ntfy/src/: lib.rs
cli/plugins/omnilogger/: Cargo.toml
cli/plugins/omnilogger/src/: lib.rs
cli/plugins/storage/: Cargo.toml
cli/plugins/storage/src/: lib.rs
cli/src/: main.rs
core/: Cargo.toml  build.rs  flutter_rust_bridge.yaml
core/src/: api.rs  bus.rs  dlq.rs  engine.rs  errors.rs  event.rs  hotswap.rs  lib.rs  main.rs  manifest.rs  models.rs  network.rs  plugin_manager.rs  registry.rs  router.rs  signing.rs  supervisor.rs  worker.rs
core/src/engine/: mod.rs  wasmi_engine.rs  wasmtime_engine.rs
core/wit/: plugin.wit
flutter_app/: pubspec.yaml
flutter_app/android/: gradle.properties
flutter_app/assets/plugins/: transport_ntfy.manifest.toml
flutter_app/lib/: main.dart
flutter_app/lib/ffi/: core_bridge.dart  core_ffi.dart
flutter_app/lib/models/: contact.dart  message.dart  plugin_info.dart
flutter_app/lib/screens/: chat_screen.dart  contacts_screen.dart  home_screen.dart  plugins_screen.dart  setup_screen.dart
flutter_app/lib/state/: app_state.dart  chat_state.dart  plugins_state.dart
flutter_app/lib/widgets/: message_bubble.dart  plugin_card.dart
host/: Cargo.toml
host/src/: main.rs
keys/: sign_plugin.sh
manifests/: crypto.toml  ntfy.toml  storage.toml
messenger/core/: Cargo.toml
messenger/core/src/: bus.rs  core.rs  lib.rs  manifest.rs  transport.rs
messenger/flutter_app/: pubspec.yaml
messenger/flutter_app/android/app/src/main/: AndroidManifest.xml
messenger/flutter_app/lib/: main.dart
messenger/flutter_app/lib/ffi/: core_bridge.dart  core_ffi.dart
messenger/flutter_app/lib/models/: contact.dart  message.dart  plugin_info.dart
messenger/flutter_app/lib/screens/: contacts_screen.dart  home_screen.dart  plugins_screen.dart  setup_screen.dart
messenger/flutter_app/lib/state/: chat_state.dart  plugins_state.dart
messenger/flutter_app/lib/widgets/: message_bubble.dart  permission_badge.dart  plugin_card.dart
messenger/plugins/crypto_aes/: Cargo.toml
messenger/plugins/crypto_aes/src/: lib.rs
messenger/plugins/storage_memory/src/: lib.rs
plugin/: Cargo.toml
plugin-crypto/: Cargo.toml
plugin-crypto/src/: lib.rs
plugin-ntfy/: Cargo.toml
plugin-ntfy/src/: lib.rs
plugin-storage/: Cargo.toml
plugin-storage/src/: lib.rs
plugin-test/: Cargo.toml
plugin/src/: lib.rs
plugins/: crypto.toml
plugins/crypto/: Cargo.toml
plugins/crypto/src/: lib.rs
plugins/crypto_aes/: manifest.toml
plugins/logger/: Cargo.toml
plugins/logger/src/: lib.rs
plugins/ntfy/: Cargo.toml
plugins/ntfy/src/: lib.rs
plugins/storage/: Cargo.toml
plugins/storage/src/: lib.rs
plugins/storage_memory/: Cargo.toml  manifest.toml
plugins/storage_memory/src/: lib.rs
plugins/transport_ntfy/: Cargo.toml  manifest.toml
plugins/transport_ntfy/src/: lib.rs
void-core/: Cargo.toml
void-core/src/: crypto.rs  engine.rs  lib.rs  storage.rs  transport.rs  types.rs
void_app/: pubspec.yaml
void_app/android/app/src/main/: AndroidManifest.xml
void_app/lib/: chat_screen.dart  core_bridge.dart  main.dart
wit/: plugin.wit
