[workspace]
members = [
    "core",
    "cli",
    "plugins/crypto",
    "plugins/ntfy",
    "plugins/storage",
]
resolver = "2"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1

[profile.plugin-release]
inherits  = "release"
opt-level = "s"
strip     = "symbols"
panic     = "abort"
