[package]
name    = "cli"
version = "0.1.0"
edition = "2021"
default-run = "void"

[[bin]]
name = "void"
path = "src/main.rs"

[features]
default          = ["wasmtime-backend"]
wasmtime-backend = ["core/wasmtime-backend"]
wasmi-backend    = ["core/wasmi-backend"]

[dependencies]
core               = { path = "../core" }
tokio              = { version = "1", features = ["full"] }
serde_json         = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
