[package]
name = "messenger_core"
version = "0.2.0-alpha"
edition = "2021"

[lib]
name = "messenger_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
extism = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
