[package]
name    = "plugin-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen      = { version = "0.24", default-features = false, features = ["macros"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
serde_json       = { version = "1",    default-features = false, features = ["alloc"] }
