[package]
name    = "plugin-ntfy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.24", default-features = false, features = ["macros"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = { version = "1",    default-features = false, features = ["alloc"] }
