[package]
name = "crypto_aes"
version = "0.2.0-alpha"
edition = "2021"

[lib]
name = "crypto_aes"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.22"
getrandom = "0.2"
